# ai-tools

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  README.memory.md  cli.py  graph.py  langgraph.json  main.py  pyproject.toml  qq.py  session.py  tui.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: analyze.py  cli.py  commitmsg.py  graph.py  mdrender.py  memorize.py  memory_mcp.py  qq.py  repowatcher.py  runner.py  session.py
src/tests/: test_mdrender.py  test_tool_schemas.py  test_tools.py
src/tools/: __init__.py  _text.py  edit.py  fs.py  git.py  lazy_mcp.py  mcp.py  shell.py  web.py
